--- a/requirements_versions.txt
+++ b/requirements_versions.txt
@@ -7,7 +7,7 @@ gradio==3.16.2
 numpy==1.23.3
 Pillow==9.4.0
 realesrgan==0.3.0
-torch
+torch==1.13.1
 omegaconf==2.2.3
 pytorch_lightning==1.7.6
 scikit-image==0.19.2
